* Add the 18.6 version.

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,3 +1,98 @@
+2023-08-15 18.6
+完成的需求
+开源版：
+39958 文档按版本记录每个版本下的附件内容
+46723 新增区域页面中调整复制区域样式的名称
+31901 产品中设置的评审人默认具备产品访问权限
+39958 文档按版本记录每个版本下的附件内容
+44084 文档详情对比后内容区域优化删除和新增的样式
+46723 新增区域页面中调整复制区域样式的名称
+42686 版本关联需求时搜索列表中过滤掉草稿、评审中、变更中的需求
+44726 文档详情中文章内容大纲支持显示所有层级
+39958 文档按版本记录每个版本下的附件内容
+42686 版本关联需求时搜索列表中过滤掉草稿、评审中、变更中的需求
+45887 优化树状图中任务的显示规则
+46723 新增区域页面中调整复制区域样式的名称
+30539 数据备份前自动检查空间大小空间不足时给出提示
+43731 附件增加单独的预览权限
+45316 创建文档时调整选择模板的方式
+47076 测试下面的测试单中创建测试报告与执行下面测试单创建测试报告逻辑保持一致
+47293 升级流程中在执行SQL环节增加进度展示
+企业版：
+47188 汇总设置增加提示文案
+47126 透视表设计器实现汇总设置参数的开关
+47127 在未勾选汇总设置时实现下一步按钮和流程标签的校验逻辑
+47130 前台支持切换查看透视表和原始数据
+47137 前台支持查看未勾选汇总设置的透视表
+47138 前台支持查看透视表的原始数据
+47132 老用户未设置报表设计参数的水晶报表时也可以正常升级
+47137 前台支持查看未勾选汇总设置的透视表
+47138 前台支持查看透视表的原始数据
+46528 浏览数据表时可以分页查看数据表
+旗舰版：
+47077 调整瀑布项目甘特图中任务计划起止日期的显示规则
+46637 检查清单中的不符合项不直接影响评审结果
+46631 地盘待处理区块中标签下无数据时隐藏该标签
+46630 地盘待处理区块中将审批标签调整到日程后面
+46629 工时明细表中列表数据超过一屏时底部滚动条置顶显示
+44213 融合瀑布模型中看板和迭代工时数据参与挣值计算
+46639 批量创建质量保证计划时可以按过程内容默认填充所有活动、文档
+46636 评审问题列表中增加搜索功能
+46626 不符合项列表增加搜索功能
+46625 质量保证计划列表增加搜索功能
+修复的Bug
+开源版：
+36686 产品下创建非激活状态需求没有记录动态和历史记录
+36654 升级后产品需求的数据不正确
+36958 修改需求的所属产品异常
+36954 任务起止时间设置必填不生效
+36722 升级18.5系列版本，出现一致性检查需要手动执行SQL
+36910 更新燃尽图计算有误
+36959 禅道项目空间提研发需求提示【所属计划】不能为空
+35520 无产品无迭代项目用户需求列表点击SR处数字提示无权限
+35526 无产品无迭代项目研发需求列表切换为看板视图后无法再切换到用户需求
+36945 全局搜索无迭代项目下任务，点击没有跳转项目标签
+36055 通用看板模块的“泳道高度”设置“自定义”后卡片展示没有按照高度变化来呈现
+36102 mysql8下文档仪表盘下的产品文档区块sql报错
+36961 评审用例时选了了多人，用例列表中显示用户名，不显示姓名
+36074 附件下载链接带sid信息
+36826 执行的工时重复统计了父子任务的工时
+37048 后台文档模板中编辑模板的字段显示的是“创建模板”
+36981 无产品无迭代项目下文档详情页1.5级导航丢失
+36916 链接类型的文档升级后链接没有渲染出来
+35404 系统权限保存速度太慢
+35786 无产品的融合敏捷项目下的看板，批量提需求后，页面未刷新
+36405 创建产品页面选择项目集或删除项目集后产品线控件处加载2次
+37052 【性能】权限保存20s+
+25993 scrum看板任务看板按需分组切换排序条件卡片渲染不出来
+37122 在地盘仪表盘移动【我的待处理】区块，进入审批中的onlybody超链接，跳转到了页面而不是弹窗
+37046 多分支产品下提研发需求页面的“用户需求”无法正常加载
+35381 【4.4alpha1】无迭代项目需求分解任务慢
+26408 gogs服务器用户1千人时，进入绑定用户页面无加载信息
+27044 项目集下项目过多时，页面反应慢
+37084 18.5版本用例数据较多时，页面卡顿
+37243 多分支产品创建研发需求，用户需求没有根据分支联动
+37241 所有分支下创建研发需求，显示所有的用户需求
+37045 研发看板卡片拖动排序后刷新页面排序不成功
+34331 维护部门时，页面样式不正确
+37230 二次开发数据字典中左侧目录树无法正常展示
+企业版：
+36779 Bug类型统计表表头类型显示的不是中文
+36857 透视表下的项目Bug类型统计表中类型显示为了键名
+36920 BI下导出按钮失效
+36626 登录有代码报错
+旗舰版：
+34960 文档链接复制后在新页签中打开报错
+36453 linux一键安装包瀑布项目评审保存结果有报错
+33583 瀑布项目甘特图中阶段显示的计划开始、结束时间不正确
+36465 工作流开启审批流后进行评审时不发送webhook应用通知
+36115 私有产品可访问权限，增加项目所属项目集干系人
+35661 【调整优化】达梦数据库版本的禅道升级时，数据库备份页面需优化
+36051 地盘仪表盘中未完成的项目统计瀑布项目进度没有跟随周报进度
+37040 新增工作流字段后项目阶段测试用例搜索异常
+35828 状态为“已入库”的数据依然可以进行批量审批
+37235 里程碑报告中开始周数和结束周数不正确
+
 2023-07-27 ipd1.0
 完成的需求
 42981 实现需求的导入功能
