* Add the story for performance optimization for changelog.

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,23 +1,27 @@
 2023-08-15 18.6
 完成的需求
 开源版：
-39958 文档按版本记录每个版本下的附件内容
-46723 新增区域页面中调整复制区域样式的名称
+30539 数据备份前自动检查空间大小空间不足时给出提示
 31901 产品中设置的评审人默认具备产品访问权限
+39107 优化重复Bug下拉菜单的加载速度
 39958 文档按版本记录每个版本下的附件内容
+40703 历史记录数据较多时，加载性能优化
+42686 版本关联需求时搜索列表中过滤掉草稿、评审中、变更中的需求
+43731 附件增加单独的预览权限
 44084 文档详情对比后内容区域优化删除和新增的样式
-46723 新增区域页面中调整复制区域样式的名称
-42686 版本关联需求时搜索列表中过滤掉草稿、评审中、变更中的需求
 44726 文档详情中文章内容大纲支持显示所有层级
-39958 文档按版本记录每个版本下的附件内容
-42686 版本关联需求时搜索列表中过滤掉草稿、评审中、变更中的需求
+45166 优化InnoDB对于REPLACE操作的性能支撑问题
+45316 创建文档时调整选择模板的方式
 45887 优化树状图中任务的显示规则
 46723 新增区域页面中调整复制区域样式的名称
-30539 数据备份前自动检查空间大小空间不足时给出提示
-43731 附件增加单独的预览权限
-45316 创建文档时调整选择模板的方式
 47076 测试下面的测试单中创建测试报告与执行下面测试单创建测试报告逻辑保持一致
 47293 升级流程中在执行SQL环节增加进度展示
+48093 优化项目概况页加载速度
+48094 优化执行概况页加载速度
+48492 一键安装包默认的内存大小提升到512M
+48493 一键安装包默认的附件大小提升到100M
+48500 希望创建产品和创建分支的权限可以解耦
+48612 测试报告的测试范围只展示版本关联的需求和Bug
 企业版：
 47188 汇总设置增加提示文案
 47126 透视表设计器实现汇总设置参数的开关
