--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,3 +1,172 @@
+2023-08-29 18.7
+完成的需求
+开源版：
+47588 开源版包含企业版AI配置的功能
+47589 开源版包含企业版语言模型的功能
+47591 后台实现设置语言模型的权限配置
+47592 内置需求润色提词
+47593 内置一键拆用例提词
+47617 语言模型页面新增升级引导的超链接
+47664 开源版包含企业版提词的部分功能
+47680 后台实现发布提词的权限配置
+47681 后台实现下架提词的权限配置
+47682 后台实现浏览提词列表的权限配置
+47683 后台实现查看提词详情的权限配置
+47989 开源版增加升级引导弹窗组件
+47991 内置Bug润色提词
+47992 内置任务润色提词
+47993 内置需求转任务提词
+47994 内置Bug转需求提词
+47995 内置角色模板
+48079 开源版增加升级引导的内容展示
+48080 企业版增加升级引导弹窗组件
+48081 企业版增加升级引导的内容展示
+48133 开源版、企业版升级引导的英文版内容展示
+45747 平台合码后将渠成菜单落地在禅道devops平台
+45925 调整DevOps二级导航栏
+45928 添加代码库二级导航栏
+45933 代码页面样式优化
+45935 添加代码库表单样式优化
+45936 代码库列表样式优化
+45939 编辑代码库表单样式优化
+45944 下载代码弹窗样式调整
+45934 文件详情页面样式优化
+45938 批量添加代码库表单样式调整
+45940 代码库信息同步页面样式调整
+45942 提交详情页面样式调整
+45943 文件追溯页面样式调整
+45946 所有版本页面样式调整
+45947 比较差异页面样式调整
+46218 合并请求列表样式优化
+46219 创建合并请求表单样式优化
+46220 编辑合并请求表单样式优化
+46221 合并请求概览页面样式优化
+46222 合并请求比对代码页面样式优化
+46223 合并请求关联软件需求页面样式优化
+46224 合并请求关联Bug页面样式优化
+46225 合并请求关联任务页面样式优化
+46227 合并请求关联的软件需求列表页面样式优化
+46228 合并请求关联的Bug列表页面样式优化
+46229 合并请求关联的任务列表页面样式优化
+41289 调整创建合并请求逻辑
+46203 流水线列表样式优化
+46204 添加流水线表单样式优化
+46205 编辑流水线表单样式优化
+46206 流水线执行日志页面优化
+46207 流水线执行历史列表样式优化
+47025 流水线列表1.5级下拉菜单添加产品分组
+47089 调整编辑合并请求逻辑
+46725 在后台首页中添加DevOps设置
+46740 在DevOps设置二级导航栏添加资源
+46767 在资源下管理机房
+46768 在资源下管理账号
+46769 在资源下管理城市
+46770 在资源下管理服务商
+46771 在资源下管理CPU品牌
+46772 在资源下管理系统版本
+46773 将指令设置迁移至DevOps设置
+46827 在DevOps设置二级导航栏添加平台
+46829 在平台下管理数据库
+46830 在平台下管理域名
+46832 在平台下管理对象存储
+47146 在资源下管理主机
+45503 DevOps二级导航打印应用菜单
+45504 实现手动添加应用的功能
+45505 实现应用列表
+45507 在应用列表页面打印添加应用按钮
+45535 实现升级应用的功能
+45536 实现访问应用的功能
+45537 实现启动应用的功能
+45538 实现关闭应用的功能
+45539 实现浏览应用详情的功能
+45655 实现应用数据库管理的功能
+45656 实现设置应用的功能
+45657 实现删除应用的功能
+47257 实现从应用市场添加应用的功能
+45508 实现从应用市场安装应用的功能
+45518 实现应用市场卡片列表功能
+45521 实现在应用市场浏览应用详情的功能
+47719 使用q命令行安装DevOps平台版本
+47838 实现平台仪表盘
+42964 优化代码库访问权限的设置
+44546 应用管理支持手工配置Nexus
+44547 在DevOps视图二级菜单中增加制品库
+48403 浏览制品库列表
+48643 添加制品库
+48645 版本关联制品
+48720 编辑制品库
+48724 删除制品库
+48727 添加制品库权限
+48732 应用市场添加应用时自定义名称
+企业版：
+47671 后台实现下架提词的权限配置
+47669 后台实现发布提词的权限配置
+47628 前台使用提词时实现异常状态提示
+47547 从提词设计器点击去调试按钮跳转至表单页
+47305 后台权限新增AI配置模块
+47309 后台实现浏览提词列表的权限配置
+47310 后台实现查看提词详情的权限配置
+47315 后台实现创建提词的权限配置
+47318 后台实现编辑提词的权限配置
+47319 后台实现设计提词的权限配置
+47320 后台实现删除提词的权限配置
+47323 AI配置权限新增提词和语言模型权限包
+47327 后台实现设置语言模型的权限配置
+47328 提词应用的使用依赖于结果处理表单页权限
+45294 提词详情页面提词ID和提词名称的展示
+47152 前台页面增加 AI 提词的描述展示
+45329 提词详情页面实现提词设计信息的展示
+47142 实现提词名称的唯一性
+45330 提词详情页面实现创建提词功能
+46852 实现删除提词的二次确认弹窗
+45420 提词详情页面实现历史记录功能
+46851 实现下架提词的二次确认弹窗
+45421 提词详情页面实现基本信息的展示
+45423 提词详情页面实现选择上一个、下一个提词功能
+45422 提词详情页面实现悬浮操作栏
+45292 提词列表展示样式
+45382 实现将设计的提词封装成提词应用的功能
+45392 前台页面打印提词应用的下拉菜单按钮
+45393 前台页面打印提词应用的按钮
+45435 提词设计中结果处理页面实现下一步和去调试的功能
+45715 提词前台实现设计提词的弹窗
+45716 设计提词弹窗实现弹窗标题
+45718 设计提词弹窗打印关闭按钮
+45717 实现调试提词后点击保存按钮的返回逻辑
+45737 提词列表操作栏交互逻辑
+45738 提词阶段的交互逻辑
+45719 设计提词弹窗实现参数设置区块
+45768 提词列表实现统计信息和分页功能
+45720 设计提词弹窗实现输入给语言模型的内容展示区块
+45872 后台提词实现点击去调试按钮的跳转规则
+45409 提词设计器实现返回按钮的交互逻辑
+45407 提词设计器打印全局返回按钮
+45766 提词列表实现检索标签功能
+45285 提词设计器实现流程向导组件的交互逻辑
+45866 前台实现提词调试页面
+45960 设计提词弹窗打印保存按钮
+46883 提词调试页实现发布提词的功能
+46884 提词调试页实现重新生成提词结果的功能
+47720 合并提词设计器中指定角色配置项的标题
+47723 指定角色表单页打印角色模板区块的开关
+47727 指定角色表单页实现角色模板区块
+47731 在角色模板区块可以添加角色模板
+47732 在角色模板区块以卡片的方式浏览模板
+47741 在角色模板区块可以编辑角色模板
+47743 在角色模板区块可以删除角色模板
+47746 设置指定角色时可以应用角色模板
+47752 指定角色表单页打印存为角色模板表单项
+47753 隐藏AI配置中GPT-3.5中的“-”
+47756 优化提词调试页面的按钮及位置
+47759 调整结果处理页面点击去调试后的交互逻辑与反馈样式
+47786 将选择对象中的文案从数据改为字段
+47787 调整选择对象页面中对象的排序
+47902 调整AI配置卡片的介绍文案
+修复的Bug
+开源版：
+37666 地盘仪表盘 我近期参与的项目 区块顺序显示异常
+37670 linux一键安装包启动无反应
+
 2023-08-15 18.6
 完成的需求
 开源版：
