--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,3 +1,273 @@
+2023-09-28 18.8
+完成的需求
+开源版：
+49019 度量项实现操作icon替换
+49018 度量项详情页面实现切换上一个、下一个度量项的切换功能
+48353 结合度量项基本信息生成PHP模板的文件
+48657 实现度量项收集机制
+48644 在度量项详情页可以查看描述和计算规则信息
+48775 度量项详情页打印操作栏
+48774 实现度量项的未发布和已发布阶段
+49136 旧版本度量项升级后度量项列表的展示
+48763 将创建新度量按钮名称调整为创建度量项
+49115 旧度量项升级后已发布的详情页
+49183 度量项可视化区域列表的尺寸选择
+48598 创建度量项时可以通过下拉选择度量项的单位
+49057 度量项查看页面实现度量项筛选功能
+49182 度量项的可视化图表的展示逻辑
+48589 录入PHP文件时可以下载度量模板
+49052 切换组合查看后，度量项列表支持批量选择
+49181 现有度量项定时采集处理方案
+48588 录入PHP文件时可以查看引导提示
+49051 组合查看度量项时新增已选度量项区域
+49056 批量查看度量项时可视化区块实现移除度量项操作
+48586 调整度量项列表操作栏中按钮及跳转逻辑
+49048 度量项列表新增切换至组合查看与单独查看按钮
+49055 度量项可视化区块新增详情按钮
+48585 将创建度量项页面改为弹窗
+49047 度量项查看页面新增检索标签
+49054 度量项可视化区块新增范围筛选器、周期筛选器和采集时间筛选器
+48576 度量项列表页打印阶段的检索标签
+49045 度量项查看页面新增度量项列表
+49053 组合查看时可视化区域展示样式
+48358 在实现度量项弹窗中打印发布按钮
+49040 度量项查看页面打印管理度量项按钮
+49050 单个度量项可视化展示区块新增收藏按钮
+48354 录入PHP文件时支持校验文件
+49038 旧度量项升级后未发布的详情页
+49049 单独查看时度量项的可视化展示
+48352 实现度量项关联PHP文件的实现弹窗
+49031 度量项列表新增实现方式标签
+48340 优化创建度量项时可选择的目的名称及类型
+49030 旧度量项升级处理
+48301 创建度量项时支持选择更多的对象
+48587 度量项新增度量项查看页面
+48300 创建度量项时支持选择更多的范围
+48292 创建度量项表单中新增描述表单项的提示
+48267 调整创建度量项表单中表单项的必填项
+48268 创建度量项表单支持记录度量项的计算规则
+48266 优化创建度量项表单中表单项的名称
+44009 将后台度量中的度量定义迁移到BI二级菜单中
+48568 优化度量项列表的样式及字段
+48584 在度量项列表页可以通过分组树查看度量项
+48620 BI二级菜单中打印维度和度量项之前的分割线
+48640 在浏览度量项时可以查看度量项详情页
+48641 在度量项详情页可以查看基本信息
+48642 在度量项详情页可以查看创建编辑信息
+48647 在度量项详情页可以查看历史记录
+48648 在度量项详情页打印返回按钮
+48654 度量数据表可以根据度量项定义显示不同的列
+48656 开源版内置度量项
+49436 内置度量项的操作逻辑
+49437 未发布内置度量项的编辑表单
+44008 隐藏度量数据模块
+49579 按产品统计的已立项研发需求数
+49580 按产品统计的有用例的已立项研发需求数
+49787 度量项序号排序规则
+49370 DevOps平台版安装时增加配置向导
+49368 DevOps平台版安装时优化提示语
+企业版：
+48135 新增月度应用巡检报告大屏
+48137 将应用巡检报告插件内容转到大屏中
+48138 新增活跃账号数项目间对比
+48139 新增产品概况区块
+48140 新增产品需求概况表
+48141 新增产品月度需求平均交付周期
+48142 新增项目概况区块
+48143 新增项目任务概况表
+48144 新增产品测试表
+48145 项目需求概况表
+48161 新增月度全局筛选器
+IPD版：
+48270 OR界面一级导航中增加市场菜单
+48271 打印市场管理的二级导航菜单
+48272 实现报告列表的标签样式及筛选功能
+48274 实现报告列表功能
+48275 在报告列表中打印操作按钮
+48276 实现报告的创建功能
+48277 实现编辑报告表单功能
+48278 实现查看报告详情的功能
+48280 实现删除报告功能
+48293 实现市场列表功能
+48294 在市场列表右上角打印添加市场按钮
+48295 实现市场列表的标签样式及筛选功能
+48296 在市场列表的操作列中打印操作按钮
+48297 实现添加市场功能
+48298 实现编辑市场信息功能
+48299 实现删除市场功能
+48425 打印市场的二级导航菜单
+48426 实现市场的1.5级导航菜单
+48427 实现市场的概况页面功能
+48433 在市场报告列表中实现创建报告功能
+48462 实现市场的报告列表功能
+48463 实现市场报告列表的标签样式及筛选功能
+48464 在市场的报告列表右上角打印创建报告按钮
+48465 在市场的报告列表中打印操作按钮
+48467 实现市场报告的编辑功能
+48758 在报告列表右上角打印创建报告按钮
+49046 实现发布报告功能
+48428 实现市场的调研列表功能
+48429 在市场调研列表右上角打印发起调研按钮
+48430 在市场调研列表中实现发起调研功能
+48431 在市场调研列表的操作列中打印操作按钮
+48432 在市场调研列表中实现编辑调研功能
+48434 在市场调研列表中实现删除调研功能
+48435 在市场调研列表中实现查看调研功能
+48436 在市场调研列表中实现关闭调研功能
+48438 实现市场调研阶段和任务列表
+48439 在市场调研阶段列表右上角打印设置阶段按钮
+48440 在市场调研阶段列表右上角打印建任务按钮
+48441 实现调研阶段和任务列表的筛选标签功能
+48442 实现设置调研阶段功能
+48443 实现编辑调研阶段功能
+48444 实现细分调研阶段功能
+48445 实现开始调研阶段功能
+48446 实现关闭调研阶段功能
+48447 实现删除调研阶段功能
+48471 实现调研列表功能
+48472 在调研列表右上角打印发起调研按钮
+48473 实现发起调研功能
+48474 在调研列表的操作列中打印操作按钮
+48475 实现编辑调研功能
+48477 实现删除调研功能
+48478 实现查看调研功能
+48479 实现关闭调研功能
+48448 实现调研任务的创建功能
+48451 实现调研任务的开始功能
+48452 实现调研任务的编辑功能
+48453 实现调研任务的完成功能
+48454 实现调研任务的关闭功能
+48456 实现调研任务的取消功能
+48457 实现调研任务的复制功能
+48458 实现调研任务记录日志的功能
+48459 实现调研任务建子任务的功能
+48460 实现调研任务的删除功能
+48461 实现调研任务的指派功能
+48759 后台功能配置打印“市场”导航菜单
+48760 后台市场打印三级导航菜单
+49123 调研增加团队管理功能
+49124 实现调研项目的概况页面
+49125 实现开始调研功能
+49126 实现激活调研功能
+49169 实现激活调研阶段功能
+49179 在调研任务列表右上角打印调研概况按钮
+49212 实现调研项目白名单功能
+49343 实现调研阶段列表分页
+48762 实现后台市场策略的字段编辑功能
+48767 实现后台市场成熟度的自定义功能
+48768 实现后台市场竞争自定义功能
+49174 实现后台市场发展速度自定义功能
+49176 实现后台市场企业占比自定义功能
+49326 市场策略字段调整
+49327 市场竞争字段调整
+49328 市场发展速度字段调整
+49341 市场列表增加企业占比字段
+49342 市场创建、编辑页面增加企业占比字段
+49528 实现查看调研任务详情功能
+49529 调整需求池评审人为必填字段
+49530 调整需求池需求列表检索标签的默认展示项
+49531 调整产品列表检索标签的默认展示
+49543 调研列表中点击报告操作后的跳转规则
+49591 市场报告列表中在目标市场后面增加所属调研字段
+49592 具体一个市场的报告列表中在负责人后增加所属调研字段
+49714 创建和编辑报告页面中将来源调整到报告名称下方
+49716 报告中附件的封面下方隐藏名称和大小
+49808 企业占比字段调整为重要程度
+49809 在重要程度输入框右侧增加解释说明
+修复的Bug
+开源版：
+38453 回收站查看流水线详情页未显示删除标识
+38805 有管理GItlab应用权限的用户无法操作群组和用户
+38811 保存GitLab用户邮箱校验提示不正确
+38807 保存同名群组提示语显示不正确
+38158 代码库搜索表单中“保存搜索条件”下显示多余的下划线
+34465 研发分组用户进入DevOps页面二级导航菜单未高亮
+39015 后台权限列表缺少制品库权限
+39050 Bug列表字段排序不生效
+39005 用例拖拽排序不生效
+39061 给用户增加地盘和ai提词的权限，依赖的权限需要增加后台首页
+39014 只用应用权限的用户访问禅道不显示DevOps一级导航
+39034 非管理员用户创建合并请求获取不到分支
+39039 合并请求编辑按钮 列表与详情不一致
+39011 devops应用权限包没有依赖和推荐权限包的关系
+39040 删除流水线的权限放到了浏览流水线的权限包中
+39025 没有管理应用权限的用户显示了添加应用按钮
+38478 Devops应用中取消绑定用户不生效
+企业版：
+37955 移除用例，鼠标悬停没显示提示文案
+38026 服务详情页样式问题
+37953 编辑上线步骤，起止时间没显示完整
+39076 年度总结的依赖权限应为查看大屏
+39066 发布大屏的权限应依赖于设计大屏的权限
+37951 指派上线步骤，历史记录修改开始和结束时间
+旗舰版：
+32201 版本修改对比页面选择不到评审按钮
+IPD版：
+33775 产品1.5及导航下拉列表项目集显示错误
+33869 编辑草稿状态需求所属产品、模块下拉组件内容超长时超过页面区域需进行截断显示
+33871 关闭强制评审，编辑用户需求勾选需要评审不选择评审人没有提示
+34096 创建产品用户需求页面没有指派给字段
+34097 创建产品用户需求页面BSA字段后的悬浮解释没做
+34100 创建单个用户需求页，没有显示反馈者、通知邮箱
+34387 批量创建用户需求页面，多图上传无法使用
+34428 路标关联需求后，需求详情页历史记录动作语言项缺失中文
+35059 英法德语下产品二级导航重叠显示
+35192 项目阶段列表分页显示有问题
+35348 OR界面没有默认的权限分组
+35360 安装ipd后普通用户登录页面闪烁
+36471 需求池下批量导入需求时未校验必填项
+36484 需求池导出模板中默认字段与需求不一致
+36687 需求池草稿需求提交评审提示502
+36982 IPD界面研发中的用户需求变更按钮置灰了
+37356 ipd项目阶段列表的提交评审按钮不可用
+37468 专业版升级至ipd版，项目集列表等多个页面报错
+37536 OR界面权限分组不显示描述信息
+37541 ipd1.0版本，非ipd项目，任务详情里没有部分操作按钮
+37553 18.6升ipd1.0.1,admin账户没有OR界面权限
+37555 18.6升ipd1.0.1报错，无法升级
+37566 【php8.1】需求池页面有报错
+37584 【php8.1】需求池需求提交评审报错502
+37586 【php8.1】需求池需求详情页有报错
+37587 【php8.1】点击路标下用需报错502
+37595 【php8.1】ipd项目阶段页有报错
+37607 OR界面中在我的空间和团队空间中创建文档库不成功
+37618 瀑布项目阶段任务列表中任务操作被冻结
+37673 OR界面进入团队空间文档详情页，二级导航没有高亮
+37677 【PHP8.1】需求池需求导入导出报错502
+37679 【PHP8.1】立项评审结果页面报错
+37682 【PHP8.1】点击动态中的用户名报错
+37683 【PHP8.1】编辑需求池报错
+37685 【PHP8.1】OR界面批量编辑产品报错
+37686 【PHP8.1】需求池需求指派报错502
+37687 【PHP8.1】OR产品用户需求页有报错
+37698 【PHP8.1】关闭需求池报错502
+37700 【PHP8.1】导出产品报错502
+37702 【PHP8.1】OR界面导入产品用户需求页有报错
+37710 【PHP8.1】OR界面地盘待处理页有报错
+37717 【PHP8.1】IPD评审报告有报错
+37824 OR界面后台显示Devops设置
+37826 进入DevOps设置有报错
+37979 项目研发需求页，操作按钮显示异常
+37982 ipd1.0.1升级至ipd1.0.2报错
+37993 OR界面应不显示AI相关内容
+38024 执行看板中无法关闭需求
+38160 升级到ipd1.0.2后进入DevOps设置报错
+38167 升级到ipd1.0.2后台权限没显示DevOps模块名
+38177 OR界面产品下激活的需求不能变更
+38234 12.5.3升级ipd1.0.2报错
+38285 删除了项目集下的项目，项目集进度还在计算删除了的项目
+38488 IPD项目阶段的[开始]按钮置灰但可以点击
+38646 删除有记录工时的子任务，父任务的工时未更新
+35460 一个路标关联了多个立项，立项通过后，仍可评审其他立项
+35582 对需求池内已分发的需求，进行变更和再评审后，该需求在需求池内的状态不能和产品下需求的状态同步。
+33765 草稿状态需求详情页面按钮打印错误
+33766 提交评审人、提交变更人查看评审中状态子需求操作按钮没有显示撤销评审按钮
+33764 子需求详情页查看父需求后返回没有返回到子需求详情页
+35338 阶段的状态tab标签下，子阶段显示了评审点
+38494 IPD项目分页后，子阶段显示位置不正确
+38496 分页后IPD项目不可开始的阶段可以点击开始
+33436 草稿状态需求，评审人[提交评审]操作按钮没有置灰
+
 2023-08-29 18.7
 完成的需求
 开源版：
