+ Complete the client's changelog and release details.

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -174,6 +174,22 @@ IPD版：
 49716 报告中附件的封面下方隐藏名称和大小
 49808 企业占比字段调整为重要程度
 49809 在重要程度输入框右侧增加解释说明
+禅道客户端：
+47106 优化客户端左侧禅道核心流程导航
+47107 优化客户端左侧禅道辅助流程导航
+47108 优化客户端左侧会话、应用、AI导航入口
+47109 优化客户端底部导航栏搜索框
+49119 实现客户端底部导航栏可以记录会话、应用相关操作路径
+49121 增加底部导航栏操作路径的滚动查看功能
+47952 侧边导航栏的交互样式优化
+48023 优化个人状态的类型及展示
+49290 实现禅道客户端与喧喧主题的初步融合
+49332 实现禅道大桌面的语言切换界面设计
+49331 实现禅道大桌面的修改密码界面设计
+49330 实现禅道大桌面的个性化设置界面设计
+49329 实现禅道大桌面的研发界面切换设计
+48019 实现禅道大桌面的个人信息修改设计
+48015 整合喧喧及禅道个人中心的菜单结构
 修复的Bug
 开源版：
 38453 回收站查看流水线详情页未显示删除标识
@@ -267,6 +283,11 @@ IPD版：
 38494 IPD项目分页后，子阶段显示位置不正确
 38496 分页后IPD项目不可开始的阶段可以点击开始
 33436 草稿状态需求，评审人[提交评审]操作按钮没有置灰
+禅道客户端：
+38968 点开个人信息后，点击除个人信息外的其他区域，没有关掉个人信息弹窗
+38966 个人信息卡片下，状态icon前面有留白
+38965 鼠标悬浮到左侧拓展菜单和底部导航后，菜单没有高亮显示
+38964 主干 聊天导航未读消息标识展示有误
 
 2023-08-29 18.7
 完成的需求
