* [release] adjust release info.

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,3 +1,95 @@
+2024-09-13 20.7
+完成的需求
+开源版：
+64421 菜单右键操作增加恢复默认功能
+63553 基础教程新增Scrum项目管理教程
+63552 基础教程新增瀑布项目管理教程
+63551 基础教程新增看板项目管理教程
+63548 进阶教程新增看板项目管理教程
+63547 进阶教程新增瀑布项目管理教程
+63546 进阶教程新增Scrum项目管理教程
+63519 菜单右键操作增加移动排序功能
+63518 菜单右键操作增加添加功能
+63517 菜单右键操作增加隐藏功能
+63512 基础教程系列新增测试管理教程
+63511 基础教程系列新增任务管理教程
+63437 进阶教程新增产品管理教程
+63436 进阶教程系列新增文档管理教程
+63435 进阶教程系列新增项目集管理教程
+63434 基础教程系列新增产品管理教程
+63433 基础教程系列新增账号管理教程
+63432 新手引导教程修改为快速上手系列教程
+63431 头像的下拉菜单顺序和分组调整
+企业版：
+67251 工作流在不同界面增加不同所属XX字段
+66955 创建工作流时可以选择是否和1.5级导航联动
+66937 系统内置对象在多个菜单下展示时，工作流修改均生效-用例、Bug
+66935 内置工作流的列表支持拓展配置
+66934 工作流目前支持的对象的列表采用高级表格渲染
+66867 非内置的工作流配置在一级导航可以选择icon
+66179 查询筛选器选择逻辑优化
+65467 查询筛选器下拉菜单优化
+65461 员工登录次数统计表
+65460 日志汇总表
+65459 公司动态汇总表
+65441 任务状态统计表
+65440 任务类型统计表
+65439 项目任务指派统计表
+65438 项目任务完成者统计表
+65437 项目投入统计表
+65421 产品需求阶段分布表
+65420 产品发布数量统计表
+65419 产品Bug类型统计表
+65418 产品质量表
+65414 度量项联表查询的优化
+65413 实现结果筛选器为空时不查数据
+64417 工作流对象列表根据1.5级导航展示
+64416 搜索所属项目集、产品、项目、执行时增加全部
+64414 工作流中内置项目集、项目、产品、执行字段支持在工作流中使用
+64142 非内置工作流中，主表增加所属执行字段
+64141 非内置工作流中，主表增加所属产品字段
+64140 非内置工作流中，主表增加所属项目字段
+64139 非内置工作流中，主表增加所属项目集字段
+64137 创建工作流时可以选择导航、视图和位置
+63956 工作流配置的动作也可以发起通知
+63935 系统内置对象在多个菜单下展示时，工作流修改均生效-发布、版本、计划
+63904 工作流生成的列表使用高级表格
+59804 优化查询筛选器的功能
+57467 维度可以设置访问控制权限
+57466 大屏可以设置访问控制权限
+57465 图表可以设置访问控制权限
+49576 透视表可以设置访问控制权限
+36392 工作流显示在二级导航时，分配权限时可以显示在对应模块下
+修复的Bug
+开源版：
+54789 复制项目选择项目集后权限控制没有显示项目集内公开选项
+企业版：
+37619 新建的工作流发布到二级目录的“项目/瀑布”下后，选择的显示位置不生效 (Feedback#3900)
+40320 产品发布工作流设计跨流程设置时代码报错
+40326 产品计划工作流新增字段在列表展示错误
+53579 工作流设置全文检索不生效
+54801 发布到项目集二级菜单的自定义工作流点击后菜单内容错误 (Feedback#4207)
+IPD版：
+50590 项目关联需求，搜索表单加载不出来
+50660 IPD项目基线评审上传多个文件后保存报错
+51961 路标下移除需求后，点击二级导航无效
+52988 地盘使用帮助区块中界面切换样式混乱
+53127 需求池需求导入确认页面1.5级需求池显示为空
+53455 旧页面退出登录后出现报错
+53630 关闭OR需求评审流程后批量创建OR需求不应为草稿状态
+54518 需求池需求分发按钮提示文案没有判断是否开启业务需求
+54524 市场描述不显示编辑后的内容
+54579 旧页面的旧编辑器贴图不成功显示
+54701 有父子需求时，评审立项报错
+54738 编辑市场保存报错
+54748 OR界面没有批量修改路标权限
+54762 php8.1的源码包安装报错
+54765 IPD界面复制项目报错
+54769 甘特图中点评审点后返回有报错
+54771 发起评审不填写必填信息时有报错
+54796 路标下移除需求弹窗中出现报错
+54797 需求池需求撤回分发弹窗中有报错
+
 2024-08-30 20.6
 完成的需求
 企业版：
