* [misc] update release info.

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,4 +1,4 @@
-2024-09-13 20.7
+2024-09-14 20.7
 完成的需求
 开源版：
 64421 菜单右键操作增加恢复默认功能
@@ -23,6 +23,11 @@
 企业版：
 67251 工作流在不同界面增加不同所属XX字段
 66955 创建工作流时可以选择是否和1.5级导航联动
+66942 数据表中调用sql构建器组件
+66941 透视表中调用sql构建器组件
+66940 封装sql构建器对外接口回调
+66939 封装sql构建器的交互事件
+66938 封装sql构建器的组件页面
 66937 系统内置对象在多个菜单下展示时，工作流修改均生效-用例、Bug
 66935 内置工作流的列表支持拓展配置
 66934 工作流目前支持的对象的列表采用高级表格渲染
@@ -37,10 +42,25 @@
 65439 项目任务指派统计表
 65438 项目任务完成者统计表
 65437 项目投入统计表
+65436 项目需求状态分布表
+65435 项目需求阶段分布表
+65434 项目Bug解决方案分布表
+65433 项目Bug状态分布表
+65432 项目Bug创建者分布表
+65431 项目Bug解决者分布表
+65430 项目Bug指派给分布表
+65429 项目质量表
+65428 项目进展表
+65427 项目执行Bug类型统计表
+65426 产品投入表
+65424 产品汇总表
+65423 产品需求交付统计表
+65422 产品需求状态分布表
 65421 产品需求阶段分布表
 65420 产品发布数量统计表
 65419 产品Bug类型统计表
 65418 产品质量表
+65417 产品Bug解决方案统计表
 65414 度量项联表查询的优化
 65413 实现结果筛选器为空时不查数据
 64417 工作流对象列表根据1.5级导航展示
@@ -54,41 +74,307 @@
 63956 工作流配置的动作也可以发起通知
 63935 系统内置对象在多个菜单下展示时，工作流修改均生效-发布、版本、计划
 63904 工作流生成的列表使用高级表格
+63377 实现新增函数字段步骤的空页面
+63327 实现设置分组并聚合的空页面
+63325 实现添加动态查询筛选器的空页面
+63323 实现无查询条件、无查询条件组时的空页面
+63285 实现查询数据表步骤为必填的功能
+63284 实现SQL构建器的小步骤条功能
+63189 透视表、图表、中间表的手写SQL页面增加数据字典
+60817 点击步骤条中的查询数据步骤的按钮，默认进入查询数据表页面
+60676 实现添加查询筛选器生成相对应的sql语句
+60675 实现添加查询筛选器的功能
+60674 实现添加动态查询筛选器的标题和帮助问号
+60673 实现添加组、删除组的功能
+60672 实现组与组间的且或功能
+60509 实现新增字段的添加和删除功能
+60506 实现新增字段生成对应sql的功能
+60504 实现新增字段的功能
+60502 打印新增字段的标题和帮助问号
+60500 实现添加查询条件、删除查询条件的功能
+60489 实现设置分组并聚合后生成对应sql查询语句的功能
+60484 实现设置分组并聚合的功能
+60483 实现设置分组并聚合的弹窗标题和提示文案
+60482 打印设置分组并聚合的开关和帮助问号
+60471 实现预览构建的sql语句的弹窗
+60469 sql构建器页面新增预览构建的sql语句按钮
+60468 实现选择完表字段后生成对应sql查询语句的功能
+60467 实现根据选择要查询的表生成相应sql查询语句的功能
+60465 实现联表查询后字段的选择功能
+60464 实现只选择主表时字段的选择功能
+60463 打印选择查询表中的字段的标题和帮助问号
+60292 实现联表查询的增加和删除功能
+60291 实现联表查询的功能
+60290 打印添加左连接的按钮和帮助问号
+60289 实现选择主表的功能
+60288 选择要查询的数据表的标题及帮助问号
+59810 实现查询条件生成sql的能力
+59808 打印添加确定性查询条件的标题和帮助问号
 59804 优化查询筛选器的功能
+59793 切换查询方式时新增二次确认弹窗
+59790 图表、透视表和中间表的sql编辑器页面新增模式切换按钮
 57467 维度可以设置访问控制权限
 57466 大屏可以设置访问控制权限
 57465 图表可以设置访问控制权限
 49576 透视表可以设置访问控制权限
 36392 工作流显示在二级导航时，分配权限时可以显示在对应模块下
+IPD版：
+53370 在贡献的反馈列表中实现搜索功能
+53369 在贡献的反馈列表中实现筛选标签功能
+53368 实现贡献的反馈列表功能
+53367 在贡献的调研任务列表中实现搜索功能
+53366 在贡献的调研任务列表中实现筛选标签功能
+53365 实现贡献的调研任务列表功能
+53364 在贡献的用户需求列表中实现搜索功能
+53363 在贡献的用户需求列表中实现筛选标签功能
+53362 实现贡献的用户需求列表功能
+53361 在贡献的需求池需求列表中实现搜索功能
+53360 在贡献的需求池需求列表中实现筛选标签功能
+53359 实现贡献的需求池需求列表功能
+53358 贡献的三级导航中打印需求池需求、用户需求、调研任务、反馈菜单
+53357 地盘二级导航中打印贡献菜单
 修复的Bug
 开源版：
+54402 编辑用例的时候相关需求显示不全 (Feedback#6833)
+54407 业务需求、用户需求详情页中没有切换上一个下一个按钮
+54410 项目-版本中搜索功能无法正常使用 (Feedback#6854)
+54412 添加用户时错误的获取了项目权限分组 (Feedback#6822)
+54442 任务列表不显示产品模块 (Feedback#6860)
+54448 看板卡片右上角点击无效
+54537 在地盘中点击已隐藏菜单的对象，点击后报错
 54789 复制项目选择项目集后权限控制没有显示项目集内公开选项
+54794 左键点击添加的三级导航，刚添加回来的三级导航消失了
+54803 运营管理界面，右键一级导航，添加菜单有空白选项
+54806 三级导航恢复默认失效
+54807 隐藏执行下的看板导航，隐藏后多出来一条分割线
+54878 瀑布项目右键添加了二级导航后刷新页面后消失了
+54885 多人团队编辑成员弹窗中箭头不能跟任务模块联动显示
+54896 建任务弹窗任务类型等下拉框无法选择 (Feedback#6881)
+54897 创建多人任务页面指派给成员框中删除成员预计工时未更新 (Feedback#6887)
+54898 复制Bug时指派给被置空 (Feedback#6990)
+54917 白名单联系人选择框内容折行显示且有遮挡
+54918 瀑布项目下二级导航的设置菜单不显示了
+54961 后台关闭短信发信通知后页面操作有报错
+54970 需求评审人没有收到邮件通知 (Feedback#7022)
+55022 当导航被隐藏，通过URL访问当前导航下的内容时，无法显示
+55033 20版本需求所属计划支持按空条件搜索 (Feedback#7031)
+55048 20版本需求列表搜索控件中，值缺少“空”选项 (Feedback#7042)
+55054 设计详情页不显示设计类型字段
+55072 套件列表有zin提醒
+55085 设置阶段页面有报错
+55098 自定义导航设置后刷新页面会自动重置
+55105 项目设置团队时删除至最后一行也可以删除
+55108 新手教程中右键设置隐藏二级导航后，导航和提示信息都会消失
+55110 用例库的用例列表页导入csv页面代码报错
+55115 创建文档页面点击附件库时，页面代码报错
+55116 测试单用例列表页点击指派给我的tab标签，页面代码报错
+55127 导航排序后2个分隔线显示在一起
+55139 基础教程中瀑布项目的阶段设置填写表单页面有报错
+55141 设计删除后详情页没有已删除标识且还可以进行操作
+55151 使用教程中还可进行自定义导航
+55195 项目下没有执行时提Bug所属执行显示false
+55200 一般创建页面中的抄送给字段的创建联系人弹窗中，创建联系人按钮点击无效
+55204 执行下需求自定义标签下显示任务的自定义搜索条件 (Feedback#7053)
+55205 发布移除研发需求时，提示没有使用模态框
+55210 数据详情页弹窗中使用方向键会切数据 (Feedback#7062)
+55217 项目下创建用例页面点击查看需求详情，关闭弹窗后已填写的内容被清空了
+55224 项目型项目下需求的看板视图中显示了取消关联按钮
+55231 进入大屏后点击透视表二级导航有502报错
+55236 未启用迭代项目需求列表页面取消选中产品会跳转到执行页面 (Feedback#6906)
+55239 已完成、已关闭的任务截止日期还会显示红色 (Feedback#6900)
+55247 无产品时产品线无法删除报302
+55252 测试单的用例列表页按套件查看时，代码报错
+55255 创建的子项目集变成了顶级项目集
+55256 执行测试用例列表页不显示用例ID了
+55265 执行需求列表点击已保存的查询条件后搜索条件未回填
+55266 多人任务删除已有成员后，维护成员弹窗中成员被删除错误
+55273 任务详情页备注的数据不支持全局搜索 (Feedback#7090)
+55277 Xmind导入已有id用例后用例步骤为空 (Feedback#6404)
+55280 组织-团队中选中人员后查看用户需求提示访问的对象不存在 (Feedback#6415)
+55286 重建索引到用户需求卡住了，后台有报错
+55291 自定义导航存在两条分割线连着的情况
+55297 所属模块和相关需求数据不联动
+55300 bug的复制按钮列表和详情页面动作不一致 (Feedback#7096)
+55306 已经完成/关闭/取消的延期的任务还会标红显示 (Feedback#7083)
+55321 项目重新定义权限设置不生效 (Feedback#6137)
 企业版：
 37619 新建的工作流发布到二级目录的“项目/瀑布”下后，选择的显示位置不生效 (Feedback#3900)
+39754 工作流添加字段值在项目研发需求页面不显示 (Feedback#4377)
 40320 产品发布工作流设计跨流程设置时代码报错
 40326 产品计划工作流新增字段在列表展示错误
+45792 导入需求，分支下显示了所有分支的模块 (Feedback#5095)
 53579 工作流设置全文检索不生效
+53981 工作流不支持扩展JS
+54274 工作流使用新增的动作，左上角的产品信息会变 (Feedback#5435)
+54276 新建工作流搜索之后选中无法批量编辑 (Feedback#5227)
+54308 自定义增加的工作流无法分配报表权限 (Feedback#2571)
+54322 对内置工作流需求新增加的字段在项目模块下无法进行搜索 (Feedback#6550)
+54328 对内置工作流用例新增加的字段在项目模块下无法进行搜索
+54351 迭代燃尽图大屏不显示名称 (Feedback#6843)
+54361 小数字段校验不通过 (Feedback#6402)
+54362 读取不到新加字段的数据 (Feedback#6425)
+54366 设置了某条件则附件隐藏，但是附件未隐藏。 (Feedback#1775)
+54368 工作流新增的字段使用包含的条件搜索时不准确 (Feedback#6344)
+54384 LDAP导入用户界面部门宽度太小无法查看全部名称 (Feedback#6466)
+54395 工作流中无法添加扩展动作 (Feedback#4288)
+54572 工作流字段类型为附件时隐藏后还需要必填 (Feedback#4659)
+54795 运营管理界面的反馈中丢失创建时间字段
 54801 发布到项目集二级菜单的自定义工作流点击后菜单内容错误 (Feedback#4207)
+54888 删除字段代号为‘type’的字段，会干掉这个流程里所有动作的扩展动作 (Feedback#6995)
+54915 英文下创建编辑维度、透视表和大屏页有报错且不显示访问控制
+54916 编辑内置维度页维度名有遮挡
+54919 通过修改url可查看无访问控制权限的BI数据
+54965 大屏访问控制的文案不正确
+54973 工作流中列表设置显示了自定义字段在列表的自定义显示弹窗中没有自动勾选显示
+54982 图表前台页显示了他人的私有图表
+54983 图表访问控制文案不正确
+54985 大屏存为草稿有报错
+54986 草稿态大屏编辑页没有将访问控制设置带进来
+54988 部分页面访问控制白名单右侧没显示联系人
+54991 升级后流程页面中默认显示的所属项目集/项目/产品/执行字段是新添加的
+54995 内置工作流列表中显示自定义字段的用户升级后列表中没有显示该字段
+54996 复制内置所属XX字段不管复制的哪个字段数据源都是产品
+54999 运营界面项目工作流扩展但不显示新增字段自定义列却显示了该字段
+55016 通过excel导入bug没有覆盖掉项目 (Feedback#6938)
+55017 图表保存草稿报错
+55045 套件列表自定义设置页点击保存后编号和套件名称重叠
+55051 切换为二级导航但未选择所属视图时显示了是否从属于项目集
+55053 新增流程页面所属导航选择二级导航且所属视图选择项目集后“是否从属XX”默认未勾选
+55061 快捷编辑器新建界面可删除所属XX字段
+55063 组织日志导出模板中没有默认选择记录人 (Feedback#1862)
+55064 项目集下流程列表切换1.5级导航到其他项目集时页面跳转错误
+55065 工作流设置从属于XX后流程详情页未显示1.5级导航
+55067 新建流程页面提示所属产品提示应当是数字
+55073 英文下后台通知设置页工作流新建和编辑未显示为英文
+55075 搜索所有项目集下流程只列出了当前项目集数据
+55076 部分内置透视表日期筛选器没有默认为近一周
+55080 搜索输入框中搜索所属XX，值中显示了两个空
+55081 日志汇总表描述缺少语言项
+55084 组织-日志中可以看到系统中删除的用户 (Feedback#7044)
+55088 新增表页面显示了所属导航和位置字段
+55092 12.5.3升级biz10.6有报错
+55096 对业务需求新增自定义动作操作该动作保存信息报错
+55097 biz7.6升级biz10.6有报错
+55099 biz7.6升级biz10.6创建ok.txt步骤中有报错
+55111 自定义工作流数据校验页面有报错
+55117 工作通知不给创建人发信
+55118 在项目视图下新增的工作流权限未显示在项目模块的权限下
+55120 工作流所属视图为瀑布项目时二级导航菜单显示的位置不对
+55130 修改自定义工作流的位置从项目集应用下修改到执行应用下不显示在执行中
+55133 任务状态统计表，筛选执行结束日期无结果
+55134 项目任务完成者统计表无法统计没有部门的用户数据
+55146 修改工作流位置后所属XX没有自动必填
+55149 隐藏左侧导航的自定义工作流后添加菜单列出一个蓝条
+55150 发布弹窗中缺少一级导航显示
+55155 工作流发布页面选择一级导航后位置下拉未列出数据
+55158 设置工作流从属于执行后阶段下没有显示对应的工作流
+55164 大屏画布中无法拖入透视表
+55174 项目-计划创建页面不显示工作流中添加显示的自定义字段
+55185 项目类型查询筛选器默认值下拉菜单为空
+55198 自定义工作流配置在二级导航也可以选择icon
+55214 工作流数据校验页面不进行校验时显示了SQL和字段
+55215 新增表页面显示了icon选项
+55216 安装后研发需求添加字段产品-需求列表扩展后设计页面显示空白名称的字段
+55218 进入某个项目集后二级导航错乱
+55219 产品投入表和产品汇总表，无法查看结束状态的产品数据
+55235 运营管理界面点击一级导航进入的反馈列表的“创建时间”搜索条件有不显示 (Feedback#6953)
+55238 查询筛选器保存时没有提示字段不能为空
+55285 不选择查询字段无法进去[查询数据表]中
+55296 添加动态查询筛选器有报错
+55298 连接多个表，选择查询字段页面显示有问题
+55303 选择数据表区域没有滚动条
+55307 选择查询字段，字段名显示不全
+55308 编辑工作流页位置下拉未过滤掉当前工作流
+55310 点击设计透视表有报错
+55316 导出用例模板选择需求，显示拖拽操作的弹窗
+55328 工作流设置代做设计中未带入字段的校验规则 (Feedback#7107)
+55331 自定义工作流维护的数据能够通过点击ID打开详情页 (Feedback#7103)
+55332 快捷编辑器设置字段必填没有带到高级编辑器
+旗舰版：
+44481 执行任务甘特图与项目甘特图的任务延期信息不一致（项目甘特图数据有误） (Feedback#4947)
+53178 测试下Bug列表导出模板时报错
+53601 添加会议页维护联系人后跳转错误
+53605 后台权限维护列表切换英文语言项时报错
+53634 审批流转交人无法评审 (Feedback#6733)
+54005 项目设置阶段页面删除阶段不生效 (Feedback#6598)
+54128 工作流搭建的审批流程无法看到完整的操作项 (Feedback#6727)
+54130 工作流扩展字段，导入设置必填不生效 (Feedback#6720)
+54226 导出项目周报由谁完成显示不一致 (Feedback#2784)
+54311 审批流当审批人被删除时选项有重复 (Feedback#6840)
+54405 复制项目最后点击复制完成按钮报错 (Feedback#6859)
+54788 复制瀑布项目选择复制全部数据保存阶段数据时保存成功提示中有报错
+55009 20版本瀑布项目测试用例列表页没有提交评审缺失
+55019 审批流的发起人自选时，审批的人员不能多选
+55058 工作流中数据发起审批后就无法删除了 (Feedback#4660)
+55086 创建子阶段页面里程碑字段置灰不可编辑 (Feedback#6100)
+55275 复制项目型瀑布项目时报错 (Feedback#7092)
+55299 biz8.13工作流升级到max5.6关联审批流后数据详情页有报错
+55329 内置工作流开启审批流保存时报错
+55330 发起评审时自动将选择的一级审批人带入到其他节点中 (Feedback#7106)
+55334 审批页面转交时有报错
+55336 内置工作流开启审批后发起审批时报错
 IPD版：
-50590 项目关联需求，搜索表单加载不出来
-50660 IPD项目基线评审上传多个文件后保存报错
-51961 路标下移除需求后，点击二级导航无效
-52988 地盘使用帮助区块中界面切换样式混乱
-53127 需求池需求导入确认页面1.5级需求池显示为空
-53455 旧页面退出登录后出现报错
-53630 关闭OR需求评审流程后批量创建OR需求不应为草稿状态
-54518 需求池需求分发按钮提示文案没有判断是否开启业务需求
-54524 市场描述不显示编辑后的内容
-54579 旧页面的旧编辑器贴图不成功显示
-54701 有父子需求时，评审立项报错
-54738 编辑市场保存报错
-54748 OR界面没有批量修改路标权限
-54762 php8.1的源码包安装报错
-54765 IPD界面复制项目报错
-54769 甘特图中点评审点后返回有报错
-54771 发起评审不填写必填信息时有报错
-54796 路标下移除需求弹窗中出现报错
-54797 需求池需求撤回分发弹窗中有报错
+43766 需求池或需求池内需求进行通知操作时，未正常收到浏览器通知
+44127 OR界面复制权限分组显示到IPD研发管理界面 (Feedback#4980)
+45753 独立分组的用户，OR界面地盘动态不显示
+46046 php7.0版本，max4.6升级到ipd1.3，OR界面点击反馈一级导航显示502
+47414 【20版本】OR界面产品路标页面不显示1.5级产品导航了
+47500 IPD项目下执行删除重新创建之后，页面中显示重复的TR、DCP评审内容 (Feedback#5358)
+47541 需求可以多次分发到同一产品 (Feedback#5415)
+47545 需求与市场管理界面默认没有执行搜索权限 (Feedback#5397)
+47653 【20版本】IPD项目设置阶段是否允许并行处缺少问号说明
+48394 【20版本】OR界面批量编辑反馈时三级导航未高亮
+49264 火狐浏览器反馈/工单，日志弹窗闪退
+49440 需求池需求细分子需求的历史记录不正确
+49506 项目下创建需求，需求层级字段显示在最下放
+49703 后台更新动态区块中内容和日期重叠显示了
+49717 切换项目1.5级导航，有代码报错
+49725 需求池需求详情页分发产品显示不完整
+49777 提研发需求提示迭代没有关联产品
+49809 需求池需求评审人可以选择提交评审人
+49841 子业务需求不可拆分，提示文案也不正确
+49862 撤回分发的需求池需求历史记录中显示了用户需求的ID
+50900 调研任务列表标签数量显示不正确，且没显示统计信息栏
+50919 调研下没有阶段时建任务必填提示显示有误
+51614 非超级管理员用户OR界面无法维护产品线
+51924 已删除的产品在OR需求的分发产品字段中显示成了ID
+52388 创建立项时如果点击了查看路标需求中的需求详情，提交立项后一级导航显示在“产品”下
+52408 需求不能细分提示与状态不对应
+53379 OR界面业需列表页显示了批量修改计划的按钮
+53400 创建、编辑立项页已有一行或多行产品及路标信息时，新增空白行校验了产品名必填
+53607 运营界面和OR界面下删除文档库权限显示为英文
+53631 有批量编辑路标权限时，批量改需求的所属路标提示没权限
+54024 IPD项目设置阶段时，计划开始日期小于上一阶段结束时间时无提示，无法保存 (Feedback#6791)
+54213 后台开启代号并设置必填后不启用的阶段也提示要设置代号 (Feedback#6817)
+54326 IPD项目设置阶段页面保存时会校验不启用阶段的计划日期
+54515 需求池需求提交评审页必填提示信息和字段名不一致
+54595 阶段列表页中查看评审报告，返回页面不对
+54679 IPD项目甘特图的评审点显示编辑阶段
+54695 立项详情页点击对象后再点击返回按钮，没有回到立项详情页
+54696 立项详情页显示“用户需求”
+54770 甘特图中点评审点有报错(偶发)
+54802 需求池需求详情页鼠标悬浮在分发产品上没有title
+54821 关闭状态的需求不可拆分时拆分按钮隐藏了
+54852 贡献需求池需求列表搜索后点击表头所属需求池页面报错
+54857 编辑评审中状态的需求池需求保存报错
+54858 需求池需求撤销评审后，再次编辑评审人保存不上 (Feedback#6982)
+54860 用户未分配指派反馈的权限时，指派反馈显示了load信息
+54864 贡献的反馈列表中转需求池需求，保存后跳转到反馈详情页但二级导航未高亮
+54872 批量建调研子任务时代码报错
+54874 贡献的调研任务列表没有显示调研子任务
+54875 贡献的调研任务列表页搜索条件没有修改为所属调研和所属阶段
+54876 完成调研任务时指派人无法选择
+54881 贡献用户需求列表搜索条件所属路标可选项显示为空
+54883 贡献的需求池需求列表由我指派标签下不显示数据
+54887 父业需详情页点击子业需的拆分按钮报错
+54905 IPD项目创建阶段时，不启用的阶段提示‘计划完成不能为空’，无法保存， (Feedback#7001)
+54924 IPD项目设置阶段时删除一行阶段的名称保存，该阶段不显示了
+55032 复制项目后项目权限分组下的权限复制不生效 (Feedback#7035)
+55213 需求池草稿需求提交评审时，没有自动带出已设置的评审人
+55230 删除调研任务，点击确定实际没删除成功
+55242 开启反馈评审流程后，or界面创建的反馈仍然无需评审
+55314 IPD版本编辑项目保存时代码报错
+55324 研发管理界面-后台-功能配置-反馈-评审流程评审人范围不正确 (Feedback#5406)
 
 2024-08-30 20.6
 完成的需求
