* [release] update release info.

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,6 +1,202 @@
 2024-11-01 21.0
 完成的需求
+开源版：
+69179 恢复文档仪表盘查看更多的入口
+68958 文档的附件库列表中附件名称字段宽度调整
+68932 文档详情侧边栏支持自定义标签页和内容
+68628 空间和库的图标修改
+68620 页面中详情页右侧基本信息等区块支持隐藏
+68616 新建库后，页面跳转至库的详情页
+68607 在全局创建弹窗中将团队空间移动到我的空间后
+68604 列表页条目数不足一页，批量操作按钮吸附显示
+68601 去掉库下设置中的添加目录和移动的按钮
+68515 附件库增加分页
+68481 实现快捷访问的API
+68473 在空间首页、左侧目录树和下拉菜单中显示附件库
+68226 在项目空间中项目的下拉菜单中增加检索标签
+68224 在产品空间中产品的下拉菜单中增加检索标签
+68214 编辑文档保存后，页面跳转至文档详情页
+68208 快捷访问支持查看文档详情
+68204 创建库弹窗中增加文档默认排序的选项
+68093 关闭执行时给出未关闭任务提示
+68084 文档增加快捷访问的二级导航
+67488 模型配置中通用项目增加关闭设置
+67009 通用看板同一区域内禁止泳道重名
+66952 通用看板卡片支持跨区域移动
+63528 任务起止日期不在父任务范围内时给出提示
+59953 任务列表中所有执行搜索条件可以搜索到不启用迭代项目下的任务
+40638 编辑调整任务状态为已关闭时指派人自动调整为Closed
+40634 并行的多人任务消息可以同时通知到团队成员
+40585 关闭项目时给出未关闭执行提示
+40575 任务详情页面的其他相关中增加相关Bug的展示
+40574 父任务调整相关需求时提示是否同步更新子任务的相关需求
+39796 测试单通知范围增加负责人
+39748 组织下查看个人任务的列表中增加由他参与的标签
+39747 地盘贡献的任务列表中增加由我参与的标签
+39378 从全局统一键值的角度将历史记录中键转译为具体的值
+14722 任务批量编辑页面增加相关研发需求字段
+14341 任务搜索中增加相关需求字段
+13941 测试单列表中增加优先级字段
+企业版：
+68935 下一步按钮和步骤条切换逻辑优化
+68588 流程模板中可以在主表中编辑使用的字段-后端
+68585 流程模板中可以选择其他模板的字段-后端
+68579 查询筛选器和结果筛选器下拉菜单升级
+68299 子表列表增加所属模板
+68298 主表字段列表增加所属模板
+68265 流程模板中可以在子表中编辑使用的子表
+68264 流程模板中可以在子表中删除使用的子表
+68263 流程模板中可以选择其他模板的子表
+68252 流程模板中可以在子表中创建表
+68250 流程模板中可以在主表中创建字段
+68172 无产品无迭代项目按照设置的项目流程显示
+68171 项目概况增加项目流程字段
+68122 模板删除时，模板中的内容不能再被使用
+68120 流程模板中可以在主表中编辑使用的字段-前端
+68118 流程模板中可以在主表中删除/移除使用的字段
+68117 流程模板中可以选择其他模板的字段-前端
+68115 复制项目时，同时复制项目的流程模板
+68076 项目流程模板中增加默认流程
+68074 产品流程模板中增加默认流程
+68032 主表、子表的字段需要记录添加历史
+68014 敏捷/瀑布的项目模板中只能包含对应的流程
+67970 该流程已在模板中设置了专属流程，不能修改从属对象
+67969 通用流程中，非内置流程发布时，模板里的流程可以选择是否发布
+67964 项目关联两个不同的产品流程后，相关功能展示正确
+67961 通用流程中，非内置流程启用时，模板里的流程可以选择是否启用
+67960 通用流程中，非内置流程停用时，模板里的流程也停用
+67959 无迭代项目按照设置的项目流程显示
+67958 无产品项目按照设置的项目流程显示
+67957 从属于执行的非内置工作流的功能按照设置的项目流程显示
+67954 从属于项目的工作流新增的功能按照设置的项目流程显示
+67953 版本功能按照设置的项目流程显示
+67952 执行功能按照设置的项目流程显示
+67951 项目功能按照设置的项目流程显示
+67950 从属于产品的工作流新增的功能按照设置的产品流程显示
+67949 Bug功能按照设置的产品流程显示
+67948 用例功能按照设置的产品流程显示
+67947 测试单功能按照设置的产品流程显示
+67946 反馈功能按照设置的产品流程显示
+67945 工单功能按照设置的产品流程显示
+67944 计划功能按照设置的产品流程显示
+67943 发布功能按照设置的产品流程显示
+67942 研发需求功能按照设置的产品流程显示
+67941 用户需求功能按照设置的产品流程显示
+67940 业务需求功能按照设置的产品流程显示
+67939 产品功能按照设置的产品流程显示
+67938 非内置工作流删除后，会删除该对象所有的数据
+67880 创建编辑工作流时，增加字段从属于
+67842 创建项目增加项目流程字段
+67841 产品概况增加产品流程字段
+67840 创建产品增加产品流程字段
+67750 优化透视表清空逻辑
+67701 产品、项目流程中，可以发布/启用/停用某一非内置对象的流程
+67699 产品、项目流程中，可以将某一对象的流程编辑为专属流程
+67698 所属视图为项目/瀑布的工作流在融合瀑布项目下生效
+67697 产品、项目流程中支持设计配套的工作流程
+67695 实现项目流程的详情页面
+67694 实现产品流程的详情页面
+67692 实现项目流程的停用功能
+67691 实现产品流程的停用功能
+67690 实现项目流程的发布功能
+67689 实现产品流程的发布功能
+67688 实现项目流程的删除功能
+67687 实现产品流程的删除功能
+67686 实现项目流程的编辑功能
+67685 实现产品流程的编辑功能
+67684 实现项目流程的新增功能
+67683 实现产品流程的新增功能
+67682 专属工作流可以独立维护更多设置
+67680 专属工作流可以独立维护标签设计
+67679 专属工作流可以独立维护动作设计
+67676 专属工作流的主表的和子表删除字段时保持同步
+67674 专属工作流的主表的和子表编辑字段时保持同步
+67673 专属工作流的主表的和子表添加字段时保持同步
+67671 实现项目流程的列表页面
+67669 实现产品流程的列表页面
+67667 在工作流视图的二级菜单里打印项目流程菜单
+67666 在工作流视图的二级菜单里打印产品流程菜单
+67463 工单关闭原因增加自定义功能
+63261 实现透视表行分组列汇总的展示
+41110 实现用例库中用例的导出功能
+41109 在用例库的用例列表中打印导出数据菜单
+旗舰版：
+68253 机会库中的机会增加机会描述字段
+67402 聊天中增加瀑布项目审批流相关的通知
+67401 短信中增加瀑布项目审批流相关的通知
+67400 Webhook中增加瀑布项目审批流相关的通知
+67399 系统通知中增加瀑布项目审批流相关的通知
+56789 机会增加机会描述字段
 修复的Bug
+开源版：
+55813 点击动态中点击查看项目型项目中的需求页面报错 (Feedback#7261)
+55899 全局添加文档，所属库下拉显示了空间和库
+56013 还原删除的目录后文档位置不正确
+56030 我的空间切换到其它空间后，私有权限下白名单字段正常显示出来。
+56174 空间下编辑文档，刷新页面后面包屑才显示版本
+56200 产品/项目空间下创建库时，访问控制处显示了%s
+56493 编辑库弹窗中不应显示[文档默认排序]
+56574 评审未填写预计工时的需求，保存时出现了预计工时的提示
+56625 关闭执行时给出的未关闭任务的提示信息中显示的标题比较杂乱
+56629 点击历史记录中的加号，历史记录闪烁后内容消失
+56631 项目下批量编辑用例页面二级导航错误
+56652 执行需求列表缺失批量创建研发需求按钮
+企业版：
+54849 如果开启了 ldap 登录，不能登录成功 (Feedback#6976)
+55611 下拉类型结果筛选器失效
+55792 批量导入用户时手机号格式不对没有提示信息，导致导入不成功 (Feedback#5257)
+56287 导出项目时文件名没有默认名字
+56406 透视表查看自定义工作流，字段名称未带出数字
+56407 透视表查看自定义工作流有报错
+56426 sql构建器添加动态查询筛选器中[选择表]置灰不可选择
+56428 筛选器下拉菜单中显示报错
+56441 发布到项目下从属产品的，1.5级导航只能显示项目关联的产品
+56487 是否清空透视表弹窗文案不正确
+56489 sql构建器中不做修改时，下一步按钮置灰
+56490 sql构建器中变更sql后，点下一步没有弹窗提示
+56498 使用其他模板字段页字段详情信息中显示多余字段内容
+56501 使用其他模板字段查看字段详细信息后页面样式需优化
+56510 流程模板自定义工作流编辑主表字段页提示文案不准确
+56515 快捷编辑器页面可以编辑非当前模板下创建字段的名称/控件/数据类型等
+56521 字段名称过长时小眼睛和字段应该显示在一行
+56538 切换为英文语言项进入工作流高级编辑器有报错
+56539 引用其它模板的字段在前台页面中不能显示
+56542 修改工作流导航位置为二级导航后仍显示在一级导航
+56543 进入使用默认流程模板的自定义工作流时提示设置浏览列表界面内容
+56555 专属工作流子表设计页面显示多余滚动条
+56556 自定义专属工作流点击非当前模板创建的子表编辑按钮后页面置灰了
+56559 自定义专属工作流新建页显示子表字段后前台新建页面未显示子表字段
+56562 流程模板删除后项目概况页不显示使用的流程模板名称了
+56571 升级后有工作流相关报错
+56579 第二个模板使用子表时会有报错
+56583 项目流程模板设计列表点击添加流程模板后页面不对
+56584 流程主表设计页面，名称字段宽度过窄
+56585 12.5.3升级报错
+56586 创建工作流选择二级导航时所属导航不能选到项目/敏捷
+56587 添加的从属执行的工作流在默认流程中发布创建数据不能保存
+56590 模板下设计专属工作流导入字段后链接中丢失groupID
+56593 工作流设置为专属流程后访问工作流没有权限
+56595 流程模板分页为100项
+56596 设为专属的任务工作流自定义字段被其他模板引用后编辑字段页面没有显示提示文案
+56600 从属于项目的工作流流程列表点击编辑/详情后提示设置界面显示内容
+56601 biz8.3升级至biz11.0报错
+56604 工作流视图下流程页1.5级导航未正常显示
+56605 反馈下1.5级导航下拉语言项缺失
+56614 默认流程中停用流程专属工作流启用在使用专属工作流的产品下进入该工作流提示没有设计界面
+56618 敏捷项目下新建流程保存时有报错
+56619 组织模块团队成员的测试单列表页代码报错
+56630 反馈列表1.5级导航点击时报错
+56635 工作流扩展搜索功能后搜索表单未显示扩展的字段
+56644 通用工作流下编辑来源为其他模板的字段时有报错
+56645 子表字段设置为必填后新建页面没有显示为必填
+56653 升级后的工作流设置从属产品并设置专属后专属中界面显示的字段都不显示了
+56654 通用流程不存在流程模板的，不展示【使用其他模板字段】按钮
+56662 专属工作流下子表被通用工作流引用后编辑子表页面未显示通用中引用的提示
+旗舰版：
+56468 内置工作流发起评审后，没有撤回按钮
+56573 地盘会议列表有warning报错
+IPD版：
+56627 ipd2.0升级3.0报错
 
 2024-10-21 20.8
 完成的需求
